# Foreigner-style_Image_Generation

./: .gitignore  Dockerfile  Makefile  README.md  app.py  config.yaml  docker-compose.yml  exaggeration_model.py  generate.py  model.py  pyproject.toml
src/: align.py  exaggeration_model.py  generate.py  invert.py  model.py
src/op/: upfirdn2d.py
